welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: ')' expected but '[' found.
	if (talking && hour!=[0,1,2,3,4,5,6]) {
                             ^parotTrouble:5: error: illegal start of simple expression
}
^