welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
	if (talking && hour!=[0,1,2,3,4,5,6]) {
		
	}
}
